assignment 2/old_code/code/src/main/d96/astgen/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Break'", "'Continue'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'True'", 
                     "'False'", "'Array'", "'In'", "'Int'", "'Float'", "'Boolean'", 
                     "'String'", "'Return'", "'Null'", "'Class'", "'Val'", 
                     "'Var'", "'Constructor'", "'Destructor'", "'New'", 
                     "'By'", "'Self'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'+.'", 
                     "'==.'", "'!'", "'&&'", "'||'", "':'", "'='", "'::'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", "','", 
                     "'.'", "'..'" ]

    symbolicNames = [ "<INVALID>", "BOOLLIT", "BREAK", "CONTINUE", "IF", 
                      "ELSEIF", "ELSE", "FOREACH", "TRUE", "FALSE", "ARRAY", 
                      "IN", "INT", "FLOAT", "BOOLEAN", "STRING", "RETURN", 
                      "NULL", "CLASS", "VAL", "VAR", "CONSTRUCTOR", "DESTRUCTOR", 
                      "NEW", "BY", "SELF", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "EQ", "NEQ", "GT", "GTE", "LT", "LTE", "SADD", "SEQ", 
                      "NOT", "AND", "OR", "COLON", "ASSIGN", "SCOPE", "LB", 
                      "RB", "LSB", "RSB", "LCB", "RCB", "SM", "CM", "DOT", 
                      "DOUBLE_DOT", "BLOCK_COMMENT", "INTLIT", "FLOATLIT", 
                      "STRLIT", "ZERO", "STATIC_ID", "ID", "WS", "UNCLOSE_STRING", 
                      "ERROR_CHAR", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_expr = 1
    RULE_exp_0 = 2
    RULE_exp_1 = 3
    RULE_exp_2 = 4
    RULE_exp_3 = 5
    RULE_exp_4 = 6
    RULE_exp_5 = 7
    RULE_exp_6 = 8
    RULE_exp_7 = 9
    RULE_exp_8 = 10
    RULE_exp_9 = 11
    RULE_exp_10 = 12
    RULE_exp_11 = 13
    RULE_exp_RelationalOperand = 14
    RULE_exp_Idx = 15
    RULE_idx_Operators = 16
    RULE_scalar_Variable = 17
    RULE_exp_InstanceAttributeAccess = 18
    RULE_exp_InstanceAttributeAccessTerm = 19
    RULE_exp_InstanceMethodInvocation = 20
    RULE_exp_InstanceMethodInvocationTerm = 21
    RULE_exp_StaticAttributeAccess = 22
    RULE_exp_StaticMethodInvocation = 23
    RULE_exp_ObjCreation = 24
    RULE_list_Expr = 25
    RULE_type_Data = 26
    RULE_type_DataArray = 27
    RULE_array_Type = 28
    RULE_list_Attribute = 29
    RULE_list_AttributeTerm = 30
    RULE_stmt_AttributeDeclaration = 31
    RULE_lhs = 32
    RULE_stmt_Assign = 33
    RULE_stmt_If = 34
    RULE_stmt_ForIn = 35
    RULE_stmt_Block = 36
    RULE_stmt_MethodInvocation = 37
    RULE_exp_8_MethodInvocation = 38
    RULE_stmt_Continue = 39
    RULE_stmt_Return = 40
    RULE_stmt_Break = 41
    RULE_list_AttributeMethod = 42
    RULE_list_AttributeMethodTerm = 43
    RULE_stmt_MethodVarDeclaration = 44
    RULE_stmt = 45
    RULE_list_Stmt = 46
    RULE_stmt_ClassDeclaration = 47
    RULE_stmt_MethodDeclaration = 48
    RULE_stmt_ClassConstruction = 49
    RULE_stmt_ClassDestruction = 50
    RULE_stmt_ClassMethod = 51
    RULE_stmt_ClassBody = 52
    RULE_list_Parameters = 53
    RULE_seq_Parameters = 54
    RULE_seq_IDParameters = 55
    RULE_lit_Array = 56
    RULE_lit_Data = 57

    ruleNames =  [ "program", "expr", "exp_0", "exp_1", "exp_2", "exp_3", 
                   "exp_4", "exp_5", "exp_6", "exp_7", "exp_8", "exp_9", 
                   "exp_10", "exp_11", "exp_RelationalOperand", "exp_Idx", 
                   "idx_Operators", "scalar_Variable", "exp_InstanceAttributeAccess", 
                   "exp_InstanceAttributeAccessTerm", "exp_InstanceMethodInvocation", 
                   "exp_InstanceMethodInvocationTerm", "exp_StaticAttributeAccess", 
                   "exp_StaticMethodInvocation", "exp_ObjCreation", "list_Expr", 
                   "type_Data", "type_DataArray", "array_Type", "list_Attribute", 
                   "list_AttributeTerm", "stmt_AttributeDeclaration", "lhs", 
                   "stmt_Assign", "stmt_If", "stmt_ForIn", "stmt_Block", 
                   "stmt_MethodInvocation", "exp_8_MethodInvocation", "stmt_Continue", 
                   "stmt_Return", "stmt_Break", "list_AttributeMethod", 
                   "list_AttributeMethodTerm", "stmt_MethodVarDeclaration", 
                   "stmt", "list_Stmt", "stmt_ClassDeclaration", "stmt_MethodDeclaration", 
                   "stmt_ClassConstruction", "stmt_ClassDestruction", "stmt_ClassMethod", 
                   "stmt_ClassBody", "list_Parameters", "seq_Parameters", 
                   "seq_IDParameters", "lit_Array", "lit_Data" ]

    EOF = Token.EOF
    BOOLLIT=1
    BREAK=2
    CONTINUE=3
    IF=4
    ELSEIF=5
    ELSE=6
    FOREACH=7
    TRUE=8
    FALSE=9
    ARRAY=10
    IN=11
    INT=12
    FLOAT=13
    BOOLEAN=14
    STRING=15
    RETURN=16
    NULL=17
    CLASS=18
    VAL=19
    VAR=20
    CONSTRUCTOR=21
    DESTRUCTOR=22
    NEW=23
    BY=24
    SELF=25
    ADD=26
    SUB=27
    MUL=28
    DIV=29
    MOD=30
    EQ=31
    NEQ=32
    GT=33
    GTE=34
    LT=35
    LTE=36
    SADD=37
    SEQ=38
    NOT=39
    AND=40
    OR=41
    COLON=42
    ASSIGN=43
    SCOPE=44
    LB=45
    RB=46
    LSB=47
    RSB=48
    LCB=49
    RCB=50
    SM=51
    CM=52
    DOT=53
    DOUBLE_DOT=54
    BLOCK_COMMENT=55
    INTLIT=56
    FLOATLIT=57
    STRLIT=58
    ZERO=59
    STATIC_ID=60
    ID=61
    WS=62
    UNCLOSE_STRING=63
    ERROR_CHAR=64
    ILLEGAL_ESCAPE=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def stmt_ClassDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Stmt_ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.Stmt_ClassDeclarationContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 116
                self.stmt_ClassDeclaration()
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 121
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_0(self):
            return self.getTypedRuleContext(D96Parser.Exp_0Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = D96Parser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.exp_0()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Exp_1Context)
            else:
                return self.getTypedRuleContext(D96Parser.Exp_1Context,i)


        def SADD(self):
            return self.getToken(D96Parser.SADD, 0)

        def SEQ(self):
            return self.getToken(D96Parser.SEQ, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_exp_0

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_0" ):
                return visitor.visitExp_0(self)
            else:
                return visitor.visitChildren(self)




    def exp_0(self):

        localctx = D96Parser.Exp_0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_exp_0)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.exp_1()
                self.state = 126
                _la = self._input.LA(1)
                if not(_la==D96Parser.SADD or _la==D96Parser.SEQ):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 127
                self.exp_1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.exp_1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Exp_2Context)
            else:
                return self.getTypedRuleContext(D96Parser.Exp_2Context,i)


        def exp_RelationalOperand(self):
            return self.getTypedRuleContext(D96Parser.Exp_RelationalOperandContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_exp_1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_1" ):
                return visitor.visitExp_1(self)
            else:
                return visitor.visitChildren(self)




    def exp_1(self):

        localctx = D96Parser.Exp_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exp_1)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.exp_2(0)
                self.state = 133
                self.exp_RelationalOperand()
                self.state = 134
                self.exp_2(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.exp_2(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_3(self):
            return self.getTypedRuleContext(D96Parser.Exp_3Context,0)


        def exp_2(self):
            return self.getTypedRuleContext(D96Parser.Exp_2Context,0)


        def AND(self):
            return self.getToken(D96Parser.AND, 0)

        def OR(self):
            return self.getToken(D96Parser.OR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_exp_2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_2" ):
                return visitor.visitExp_2(self)
            else:
                return visitor.visitChildren(self)



    def exp_2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = D96Parser.Exp_2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_exp_2, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.exp_3(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 147
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = D96Parser.Exp_2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp_2)
                    self.state = 142
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 143
                    _la = self._input.LA(1)
                    if not(_la==D96Parser.AND or _la==D96Parser.OR):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 144
                    self.exp_3(0) 
                self.state = 149
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Exp_3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_4(self):
            return self.getTypedRuleContext(D96Parser.Exp_4Context,0)


        def exp_3(self):
            return self.getTypedRuleContext(D96Parser.Exp_3Context,0)


        def ADD(self):
            return self.getToken(D96Parser.ADD, 0)

        def SUB(self):
            return self.getToken(D96Parser.SUB, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_exp_3

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_3" ):
                return visitor.visitExp_3(self)
            else:
                return visitor.visitChildren(self)



    def exp_3(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = D96Parser.Exp_3Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_exp_3, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.exp_4(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 158
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = D96Parser.Exp_3Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp_3)
                    self.state = 153
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 154
                    _la = self._input.LA(1)
                    if not(_la==D96Parser.ADD or _la==D96Parser.SUB):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 155
                    self.exp_4(0) 
                self.state = 160
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Exp_4Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_5(self):
            return self.getTypedRuleContext(D96Parser.Exp_5Context,0)


        def exp_4(self):
            return self.getTypedRuleContext(D96Parser.Exp_4Context,0)


        def MUL(self):
            return self.getToken(D96Parser.MUL, 0)

        def DIV(self):
            return self.getToken(D96Parser.DIV, 0)

        def MOD(self):
            return self.getToken(D96Parser.MOD, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_exp_4

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_4" ):
                return visitor.visitExp_4(self)
            else:
                return visitor.visitChildren(self)



    def exp_4(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = D96Parser.Exp_4Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_exp_4, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.exp_5()
            self._ctx.stop = self._input.LT(-1)
            self.state = 169
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = D96Parser.Exp_4Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp_4)
                    self.state = 164
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 165
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.MUL) | (1 << D96Parser.DIV) | (1 << D96Parser.MOD))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 166
                    self.exp_5() 
                self.state = 171
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Exp_5Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(D96Parser.NOT, 0)

        def exp_5(self):
            return self.getTypedRuleContext(D96Parser.Exp_5Context,0)


        def exp_6(self):
            return self.getTypedRuleContext(D96Parser.Exp_6Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_exp_5

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_5" ):
                return visitor.visitExp_5(self)
            else:
                return visitor.visitChildren(self)




    def exp_5(self):

        localctx = D96Parser.Exp_5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_exp_5)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.NOT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.match(D96Parser.NOT)
                self.state = 173
                self.exp_5()
                pass
            elif token in [D96Parser.BOOLLIT, D96Parser.ARRAY, D96Parser.NULL, D96Parser.NEW, D96Parser.SELF, D96Parser.SUB, D96Parser.LB, D96Parser.INTLIT, D96Parser.FLOATLIT, D96Parser.STRLIT, D96Parser.ZERO, D96Parser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.exp_6()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_6Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUB(self):
            return self.getToken(D96Parser.SUB, 0)

        def exp_6(self):
            return self.getTypedRuleContext(D96Parser.Exp_6Context,0)


        def exp_7(self):
            return self.getTypedRuleContext(D96Parser.Exp_7Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_exp_6

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_6" ):
                return visitor.visitExp_6(self)
            else:
                return visitor.visitChildren(self)




    def exp_6(self):
